--- a/data_process/data_process.ipynb
+++ b/data_process/data_process.ipynb
@@ -7642,6 +7642,31 @@
     "    save_dir 生成的节点训练数据保存路径\n",
     "'''"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## BERT预训练后利用模型进行节点编码"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import importlib\n",
+    "en = importlib.import_module('4_encoding_node_info')\n",
+    "file_dir = f\"./train_data/data_node\"\n",
+    "train_dir = os.path.join(file_dir, 'train')\n",
+    "val_dir = os.path.join(file_dir, 'val')\n",
+    "test_dir = os.path.join(file_dir, 'test')\n",
+    "\n",
+    "en.encode_text_files(train_dir)\n",
+    "en.encode_text_files(val_dir)\n",
+    "en.encode_text_files(test_dir)"
+   ]
   }
  ],
  "metadata": {
